--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -119,8 +119,7 @@ background-color: #FFFDE7;
 
       .restaurant-cards{
         width: 150px;
-        height: 150px;
-        width: 150px;
+        // height: 150px;
         margin: 5px;
         padding: 5px;
         .material-icons{
@@ -181,11 +180,11 @@ background-color: #FFFDE7;
         }
         .viewall-image{
           border-radius: 5px;
-          width: 8vw;
+          width: 10px;
         }
-
         .viewall-counter{
           padding-top: 2px;
+          font-size: calc(.6em + .5vw);
         }
 
         .viewall-name{
@@ -202,7 +201,7 @@ background-color: #FFFDE7;
 
         .viewall-category{
           color: #616161;
-          font-size: calc(.7em + .7vw);
+          font-size: calc(.6em + .6vw);
         }
 
         .viewall-restaurant-info{
@@ -250,6 +249,17 @@ background-color: #FFFDE7;
           top: 5px;
         }
       }
+      }
+      .menu-pane{
+        margin-top: 30px;
+        box-shadow: 0px 1px 10px -1px rgba(0,0,0,0.75);
+
+      }
+      .detailview-menu-header{
+        border-bottom: 2px solid grey;
+        h1{
+          text-transform: uppercase;
+        }
       }
       .detailview-aside{
         color: #fff;
@@ -334,7 +344,7 @@ background-color: #FFFDE7;
       // background-color: green;
       color: #616161;
       line-height: 35px;
-      border-bottom: 2px solid #EEEEEE;
+      border-bottom: 1px solid #EEEEEE;
     }
   }
 }
