--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -16,7 +16,7 @@ img {
   max-width: 100%;
 }
 .container{
-background-color: #FFFDE7;
+// background-color: #FFFDE7;
 }
 
 //IN THE MOOD HEADER
@@ -68,30 +68,37 @@ background-color: #FFFDE7;
 
 //CATEGORIES BAR
 .categories-bar{
-  margin-top: 50px;
-  margin-bottom: 50px;
+  padding-top: 70px;
+  padding-bottom: 70px;
+  background-image: url('http://www.fortunebuilders.com/wp-content/uploads/2015/03/greenville-downtown-cityscape.jpg');
+  background-position: right;
+  background-size: cover;
   .categories-dropdown{
+    // background-color: rgba(50, 50, 50, 0.5);
     background-color: #fff;
-    border: 2px solid #E0E0E0;
+    // border: 2px solid #E0E0E0;
     border-radius: 5px;
-
+    box-shadow: 0px 1px 10px -1px rgba(0,0,0,0.75);
     .btn{
-      color: #616161;
+      color: #212121;
       padding: 2px;
-      margin-top: 15px;
-      margin-bottom: 15px;
-      background-color: #fff;
+      margin-top: 10px;
+      margin-bottom: 10px;
       border: 0px;
       border-radius: 0;
-
       .categories-heading{
-        font-size: 5vh;
-        color: #616161;
-        // font-style: italic;
+        font-size: 4vh;
+        color: #424242;
       }
       .caret{
         margin-left: 15px;
       }
+    }
+    .categories-search-icon{
+      margin-top: 20px;
+      margin-bottom: 15px;
+      margin-right: 20px;
+      font-size: 25px;
     }
   }
   .categories-dropdown:hover{
@@ -453,30 +460,36 @@ background-color: #FFFDE7;
 //Template
 .template{
   .nav-bar-col{
-    background-color: beige;
-    box-shadow: 0px 1px 10px -1px rgba(0,0,0,0.75);
-    background-image: url('http://www.fortunebuilders.com/wp-content/uploads/2015/03/greenville-downtown-cityscape.jpg');
-    background-position: right;
-    background-size: cover;
+    // background-color: beige;
+    // box-shadow: 0px 1px 10px -1px rgba(0,0,0,0.75);
+    margin-top: 10px;
+    // background-image: url('http://www.fortunebuilders.com/wp-content/uploads/2015/03/greenville-downtown-cityscape.jpg');
+    // background-position: right;
+    // background-size: cover;
     .nav-headers{
       background-color: rgba(36, 44, 44, 0.3);
-      // padding: 15px;
+      // margin-right: 20px;
+      height: 50px;
+      padding-top: 5px;
 
-      .nav-header{
-        text-transform: uppercase;
+      .nav-header-1{
         text-transform: uppercase;
         font-weight: bold;
-        // height: 5vw;
-        font-size: calc(2em + 2vw);
+        font-size: calc(1em + 1vw);
         color: #E65100;
       }
-      .nav-subheader{
+      .nav-header-2{
         text-transform: uppercase;
-        text-transform: uppercase;
-        // height: 3vw;
-        font-size: calc(1.5em + 1.5vw);
-        color: #fff;
+        font-weight: bold;
+        font-size: calc(1em + 1vw);
+        color: #FFFFFF;
       }
+      // .nav-subheader{
+      //   text-transform: uppercase;
+      //   text-transform: uppercase;
+      //   font-size: calc(.5em + .5vw);
+      //   color: #fff;
+      // }
     }
   }
   .nav-message{
@@ -484,9 +497,9 @@ background-color: #FFFDE7;
   }
 }
 
-.footer-container{
+.footer{
   border-top: 2px solid #BDBDBD;
-  margin-top: 20px;
+  margin-top: 15px;
   padding-top: 15px;
   // background-color: #FFA000;
 }
