--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -18,6 +18,9 @@ img {
 .container{
 // background-color: #FFFDE7;
 }
+// .well{
+//   background-color: rgba(36, 44, 44, 0.9);
+// }
 
 //IN THE MOOD HEADER
 
@@ -25,7 +28,7 @@ img {
   .inthemood-header{
     text-transform: uppercase;
     font-size: calc(1.5em + 1.5vw);
-    color: #E65100;
+    color: #FFAB40;
   }
   .inthemood-subheader{
     font-size: calc(.8em + .8vw);
@@ -68,17 +71,16 @@ img {
 
 //CATEGORIES BAR
 .categories-bar{
-  padding-top: 70px;
-  padding-bottom: 70px;
+  padding-top: 90px;
+  padding-bottom: 90px;
   background-image: url('http://www.fortunebuilders.com/wp-content/uploads/2015/03/greenville-downtown-cityscape.jpg');
   background-position: right;
   background-size: cover;
   .categories-dropdown{
-    // background-color: rgba(50, 50, 50, 0.5);
+    // background-color: rgba(250, 250, 250, 0.9);
     background-color: #fff;
-    // border: 2px solid #E0E0E0;
     border-radius: 5px;
-    box-shadow: 0px 1px 10px -1px rgba(0,0,0,0.75);
+    box-shadow: 2px 4px 23px 10px rgba(0,0,0,0.5);
     .btn{
       color: #212121;
       padding: 2px;
@@ -277,7 +279,7 @@ img {
           color: #424242;
         }
         .detailview-about{
-          background-color: #FFD180;
+          background-color: #FFAB40;
           .about-image{
             float: left;
             padding: 10px;
@@ -386,7 +388,7 @@ img {
     padding: 10px;
     .login-header{
       font-size: calc(1.5em + 1.5vw);
-      color: #E65100;
+      color: #FFAB40;
       text-transform: uppercase;
     }
     .login-subheader{
@@ -460,36 +462,46 @@ img {
 //Template
 .template{
   .nav-bar-col{
-    // background-color: beige;
-    // box-shadow: 0px 1px 10px -1px rgba(0,0,0,0.75);
     margin-top: 10px;
-    // background-image: url('http://www.fortunebuilders.com/wp-content/uploads/2015/03/greenville-downtown-cityscape.jpg');
-    // background-position: right;
-    // background-size: cover;
+    .active a{
+      background-color: rgba(36, 44, 44, 0.9);
+      color: #FFAB40;
+    }
+    .active a:hover{
+      background-color: #FFAB40;
+      span{
+        color: #FFF;
+      }
+    }
+    .dropdown-toggle{
+      top: 8px;
+    }
     .nav-headers{
-      background-color: rgba(36, 44, 44, 0.3);
-      // margin-right: 20px;
-      height: 50px;
-      padding-top: 5px;
-
       .nav-header-1{
         text-transform: uppercase;
         font-weight: bold;
         font-size: calc(1em + 1vw);
-        color: #E65100;
+        color: #FFF;
       }
       .nav-header-2{
         text-transform: uppercase;
         font-weight: bold;
         font-size: calc(1em + 1vw);
-        color: #FFFFFF;
+        color: #FFAB40;
+        // font-family: 'Yellowtail', cursive;
+        .material-icons{
+          font-size: 30px;
+          position: relative;
+          left: 5px;
+          top: 5px;
+        }
       }
-      // .nav-subheader{
-      //   text-transform: uppercase;
-      //   text-transform: uppercase;
-      //   font-size: calc(.5em + .5vw);
-      //   color: #fff;
-      // }
+      .nav-header-img{
+        background-image: url("http://koagiehots.com/wp-content/uploads/2016/09/burger-icon-white.png");
+        background-size: cover;
+        height: 50px;
+        width: 50px;
+      }
     }
   }
   .nav-message{
