--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -18,9 +18,11 @@ img {
 .container{
 // background-color: #FFFDE7;
 }
-// .well{
-//   background-color: rgba(36, 44, 44, 0.9);
-// }
+.well{
+  background-color: rgba(36, 44, 44, 0.9);
+  text-transform: uppercase;
+  color: #fff;
+}
 
 //IN THE MOOD HEADER
 
@@ -71,8 +73,8 @@ img {
 
 //CATEGORIES BAR
 .categories-bar{
-  padding-top: 90px;
-  padding-bottom: 90px;
+  padding-top: 100px;
+  padding-bottom: 100px;
   background-image: url('http://www.fortunebuilders.com/wp-content/uploads/2015/03/greenville-downtown-cityscape.jpg');
   background-position: right;
   background-size: cover;
@@ -420,9 +422,19 @@ img {
 .dashboard-container{
   margin-bottom: 30px;
   padding-bottom: 20px;
-  border-bottom: 2px solid #757575;
   button{
     margin-bottom: 20px;
+  }
+  .material-icons{
+    padding-top: 10px;
+    color: #757575;
+    font-size: 30px;
+  }
+  .dashboard-header{
+    margin-top: 30px;
+    .name{
+      color: #FFAB40;
+    }
   }
 }
 
