--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -499,6 +499,7 @@ a:hover {
     margin-top: 10%;
     margin-bottom: 10%;
     padding-bottom: 20px;
+    height: 400px;
     .login-header{
       font-size: calc(1.5em + 1.5vw);
       color: #FFAB40;
