publish: err message
generated from commit 975c92b49bd2f2101c560a48b1ba435ccd5f3ef1

--- a/css/app.css
+++ b/css/app.css
@@ -6092,7 +6092,8 @@ a:hover {
     background-color: #fff;
     margin-top: 10%;
     margin-bottom: 10%;
-    padding-bottom: 20px; }
+    padding-bottom: 20px;
+    height: 400px; }
     .login-container .login .login-header {
       font-size: calc(1.5em + 1.5vw);
       color: #FFAB40;
